--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,16 @@
     <link rel="icon" href="/icon.png" type="image/png">
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
+    <!-- tailwild fraemework de CSS-->
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
+    <!-- Incluir o jQuery via CDN -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
 
   </head>
 
@@ -31,3 +37,5 @@
     </div>
   </body>
 </html>
+
+
