--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,30 +1,27 @@
-<%= form_for @blog, html: { multipart: true }, local: true do |form| %>
+<%= form_for @blog, html: { multipart: true, class: "max-w-md mx-auto" }, local: true do |form| %>
   <%= hidden_field_tag :locale, params[:locale] %>
 
-  <div>
-    <%= form.label :titulo, "Título do Blog" %>
-    <%= form.text_field :titulo %>
+  <!-- Título -->
+  <div class="relative z-0 w-full mb-5 group mt-6">
+    <%= form.text_field :titulo, class: "peer block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-blue-600", placeholder: " " %>
+    <%= form.label :titulo, "Título do Blog", class: "peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6 absolute text-sm text-gray-500 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0]" %>
   </div>
 
-  <div>
-    <%= form.label :descricao, "Descrição do Blog" %>
-    <%= form.text_area :descricao %>
+  <!-- Descrição -->
+  <div class="relative z-0 w-full mb-5 group">
+    <%= form.text_area :descricao, class: "peer block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-blue-600", placeholder: " " %>
+    <%= form.label :descricao, "Descrição do Blog", class: "peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6 absolute text-sm text-gray-500 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0]" %>
   </div>
 
+  <!-- Arquivos -->
   <div>
     <%= form.fields_for :blog_arquivos do |f| %>
-      <%= render partial: "blog_arquivos_fields", locals: { f: f } %>
+      <%= render partial: "blog_arquivos_fields", locals: { form: f } %>
     <% end %>
   </div>
 
-  <div id="blog_from">
-    <%= form.submit "Criar Blog"%>
+  <!-- Botão de envio -->
+  <div class="flex justify-center">
+    <%= form.submit "Criar Blog", class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center", data: { disable_with: "Enviando..." } %>
   </div>
-
-  <% if @blog.persisted? %>
-    <div>
-      <%= link_to "Editar Blog", edit_blog_path(@blog) %>
-    </div>
-  <% end %>
 <% end %>
-
