--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,16 @@
   </head>
 
   <body>
-  <%= render partial: "shared/navbar" %>
-  <%= render partial: "shared/flash" %>
-  <div class="container mx-auto">
-      <%= yield %>
+    <div class="">
+      <%= render partial: "shared/navbar" %>
+        <div class="grid grid-cols-1 md:grid-cols-4">
+          <!-- Sidebar -->
+          <%= render partial: "shared/sidebar" %>
+
+          <!-- Conteúdo principal -->
+          <%= render partial: "shared/flash" %>
+          <%= yield %>
+        </div>
     </div>
   </body>
 </html>
