--- a/app/views/blogs/_blog_arquivos_fields.html.erb
+++ b/app/views/blogs/_blog_arquivos_fields.html.erb
@@ -14,6 +14,6 @@
 <!--Uploader da imagem -->
 <div class="relative z-0 w-full mb-5 group mt-6">
   <%= form.label :imagens, "Upload de Fotos/Imagens", class: "block mb-2 text-sm font-medium text-gray-900 " %>
-  <%= form.file_field :imagens, multiple: true, name: "blog[imagens][]", class: "block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer" %>
+  <%= form.file_field :imagens, multiple: true, class: "block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer" %>
 </div>
 
