--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,4 +1,4 @@
-<div class="p-6 max-w-4xl mx-auto item-center">
+<div class="p-6 max-w-4xl mx-auto">
   <!-- Título e botão para criar novo blog -->
   <h1 class="text-4xl font-semibold text-gray-900 mb-6">Lista de Blogs</h1>
   <%= link_to "Criar Novo Blog", new_blog_path, class: "inline-block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-8" %>
