--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,14 +30,21 @@
   </head>
 
   <body>
-  <div class="flex-col">
+
+<!--  Mensagens de alertas -->
+  <%= render partial: "shared/flash" %>
+
+  <div class="flex flex-col w-full min-h-screen">
+<!--    Navbar-->
       <%= render partial: "shared/navbar" %>
-    <div class="flex justify-center">
+    <div class="flex flex-1">
+<!--      Sidebar-->
         <%= render partial: "shared/sidebar" %>
-        <%= render partial: "shared/flash" %>
+<!--      Produto exibido-->
+      <div class="flex-1 p-4"
         <%= yield %>
+      </div>
     </div>
-  </div>
   </body>
 
 </html>
