--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,7 @@
 <nav class="">
   <div class="max-w-screen flex flex-wrap items-center justify-between mx-auto p-4 bg-gray-50">
     <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
-      <span class="self-center text-2xl font-semibold whitespace-nowrap text-gray-900">Flowbite</span>
+      <span class="self-center text-2xl font-semibold whitespace-nowrap text-gray-900">Utopia</span>
     </a>
     <button data-collapse-toggle="navbar-multi-level" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-multi-level" aria-expanded="false">
       <span class="sr-only">Open main menu</span>
@@ -14,7 +13,7 @@
       <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
         <li>
           <% if user_signed_in? %>
-            <%= current_user.email %>
+            <a><%= current_user.email %></a>
           <% end %>
         </li>
         <li>
