--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<div class="mt-34">
-  <h2 class="text-2xl font-semibold text-center mb-6 ">BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB</h2>
+<div class="p-6 max-w-4xl mx-auto">
+  <h2 class="text-2xl font-semibold text-center mb-6 ">Registrar</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "max-w-md mx-auto bg-white p-6 rounded-lg shadow-md" }) do |f| %>
     <%= render "users/shared/error_messages", resource: resource %>
